[gd_scene load_steps=18 format=3 uid="uid://gwpsoahg047"]

[ext_resource type="Script" uid="uid://cnmmunb1kl38r" path="res://src/player.gd" id="1_tlj3e"]
[ext_resource type="Texture2D" uid="uid://hj1jf8m82tfr" path="res://Player/giraffe.png" id="2_tlj3e"]
[ext_resource type="Script" uid="uid://dii64y5t2ddg4" path="res://Player/state_machine.gd" id="3_nop80"]
[ext_resource type="Script" uid="uid://cs8sqsnsxsm45" path="res://src/state_machine/idle.gd" id="4_jbhsg"]
[ext_resource type="Script" uid="uid://c1qpdlo8cut1c" path="res://src/state_machine/jump.gd" id="5_yddfe"]
[ext_resource type="Script" uid="uid://ycbk1ryxlt8n" path="res://src/state_machine/fall.gd" id="6_117y2"]
[ext_resource type="Script" uid="uid://dh2nysnt3bd0" path="res://src/state_machine/run.gd" id="7_jix5g"]
[ext_resource type="Script" uid="uid://co64j21chowx0" path="res://src/state_machine/boost.gd" id="8_tlj3e"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hvfyp"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oem1u"]
size = Vector2(10, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5prsq"]
size = Vector2(13.5, 20)

[sub_resource type="Animation" id="Animation_nvx6x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(16, 32)]
}

[sub_resource type="Animation" id="Animation_0xtgo"]
resource_name = "fall"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_bltdr"]
resource_name = "idle"
length = 3.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.61),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 0.5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape2D:shape:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 2.61),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(16, 32), Vector2(16, 31)]
}
tracks/3/type = "method"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("StateMachine/Boost")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.0666667, 3.46667),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"deactivate_boost"
}, {
"args": [],
"method": &"activate_boost"
}]
}

[sub_resource type="Animation" id="Animation_5prsq"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_8r765"]
resource_name = "run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.266667, 0.533333, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8r765"]
_data = {
&"RESET": SubResource("Animation_nvx6x"),
&"fall": SubResource("Animation_0xtgo"),
&"idle": SubResource("Animation_bltdr"),
&"jump": SubResource("Animation_5prsq"),
&"run": SubResource("Animation_8r765")
}

[node name="Giraffe" type="CharacterBody2D" groups=["Player"]]
collision_layer = 3
script = ExtResource("1_tlj3e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_hvfyp")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("2_tlj3e")
hframes = 8
frame = 7

[node name="Area2D" type="Area2D" parent="Sprite"]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Area2D"]
position = Vector2(0, 16)
shape = SubResource("RectangleShape2D_oem1u")

[node name="BoostArea" type="Area2D" parent="Sprite"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/BoostArea"]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_5prsq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8r765")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("3_nop80")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_jbhsg")
metadata/_custom_type_script = "uid://cs8sqsnsxsm45"

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource("5_yddfe")
metadata/_custom_type_script = "uid://c1qpdlo8cut1c"

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource("6_117y2")
metadata/_custom_type_script = "uid://ycbk1ryxlt8n"

[node name="Run" type="Node" parent="StateMachine"]
script = ExtResource("7_jix5g")
metadata/_custom_type_script = "uid://dh2nysnt3bd0"

[node name="Boost" type="Node" parent="StateMachine"]
script = ExtResource("8_tlj3e")
metadata/_custom_type_script = "uid://co64j21chowx0"

[node name="Label" type="Label" parent="StateMachine"]
offset_left = -19.0
offset_top = -38.0
offset_right = 21.0
offset_bottom = -15.0

[connection signal="body_entered" from="Sprite/Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Sprite/Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Sprite/BoostArea" to="StateMachine/Idle" method="_on_boost_area_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
